# coding-learning

./: .gitignore  CLAUDE.md
.github/workflows/: deploy.yml
docs/superpowers/plans/: 2026-06-17-rust-wasm-interpreter.md
docs/superpowers/specs/: 2025-06-14-hackrust-design.md  2026-06-17-rust-wasm-interpreter-design.md
hackrust/: DEPLOY.md
hackrust/backend/: package-lock.json  package.json  vitest.config.ts
hackrust/backend/src/: compile.test.ts  compile.ts  index.ts
hackrust/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
hackrust/frontend/src/: App.tsx  index.css  types.ts
hackrust/frontend/src/components/: CodeBlock.tsx  CodeRunner.tsx  ComboIndicator.tsx  Feedback.tsx  HPBar.tsx  Layout.tsx  TerminalText.tsx  XPBar.tsx  index.ts
hackrust/frontend/src/data/: worlds.ts
hackrust/frontend/src/game/: codeValidator.test.ts  codeValidator.ts  damageCalc.test.ts  damageCalc.ts  index.ts  xpCalc.test.ts  xpCalc.ts
hackrust/frontend/src/lib/: api.ts  wasmLoader.ts
hackrust/frontend/src/pages/: Boss.tsx  Home.tsx  Level.tsx  Sandbox.tsx  WorldMap.tsx
hackrust/frontend/src/store/: gameStore.ts
wasm/code-validator/: Cargo.toml
wasm/code-validator/pkg/: code_validator.d.ts  code_validator.js  code_validator_bg.wasm  code_validator_bg.wasm.d.ts  package.json
wasm/code-validator/src/: analysis.rs  ast.rs  error.rs  eval.rs  lib.rs  parse.rs  scope.rs  stdlib.rs  value.rs
wasm/code-validator/tests/: integration_test.rs
